# syntakt_midi_controller

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  syntakt_midi_controller.py
.claude/agents/: python-code-reviewer.md
.github/workflows/: ci.yml  codecov.yml  codeql.yml  pre-commit.yml
scripts/: midi_echo_probe.py
specs/: syntakt_midi_parameters.csv  syntakt_midi_parameters.json
syntakt_controller/: __init__.py  app.py  controller_models.py
syntakt_controller/controllers/: __init__.py  main_controller.py
syntakt_controller/services/: midi.py  parameter_mapping.py
syntakt_controller/ui/: main_window.py
tests/: conftest.py  test_app.py  test_controller.py  test_integration_fake_midi.py  test_layout.py  test_parameter_mapping.py  test_ui_smoke.py
