[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntakt-midi-controller"
version = "0.1.0"
description = "Qt desktop UI prototype for controlling Elektron Syntakt over MIDI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6",
]

[project.optional-dependencies]
midi = [
  "mido>=1.3",
  "python-rtmidi>=1.5",
]
dev = [
  "pre-commit>=3.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.10",
]

[project.scripts]
syntakt-midi-controller = "syntakt_controller.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["syntakt_controller*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=syntakt_controller --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["specs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"syntakt_midi_controller.py" = ["I001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["specs/"]
